Add documentation, requisito 3 Sections e requisito 4 Products
